# lemkin-website

./: CLAUDE.md  README.md  package-lock.json  package.json  tailwind.config.js
articles/: Chain-of-Custody-in-the-Digital-Age_-Cryptographic-Evidence-Verification-for-Human-Rights-Investigations.md  Deploying-AI-in-Conflict-Zones_-Technical-and-Operational-Challenges.md  Mass-Grave-Identification-from-Aerial-Imagery_-Technical-Approaches.md  Named-Entity-Recognition-for-Conflict-Documentation_-Linguistic-Complexity-and-Technical-Challenges-in-Human-Rights-Investigations.md  (+4 more)
lemkin_website/modules/lemkin-frameworks/lemkin-images/src/lemkin-audio/: pyproject.toml
lemkin_website/modules/lemkin-frameworks/lemkin-images/src/lemkin-audio/src/lemkin_audio/: __init__.py
lemkin_website/modules/lemkin-frameworks/lemkin-images/src/lemkin-comms/: pyproject.toml
lemkin_website/modules/lemkin-frameworks/lemkin-images/src/lemkin-ocr/: pyproject.toml
lemkin_website/modules/lemkin-frameworks/lemkin-images/src/lemkin-ocr/src/lemkin_ocr/: quality_assessor.py
lemkin_website/modules/lemkin-timeline/: pyproject.toml
lemkin_website/modules/lemkin-timeline/scripts/: setup.sh
lemkin_website/modules/lemkin-timeline/src/lemkin_timeline/: __init__.py  cli.py  event_sequencer.py
modules/lemkin-comms/: Makefile  pyproject.toml
modules/lemkin-comms/scripts/: setup.sh  validate_installation.py
modules/lemkin-frameworks/: Makefile  pyproject.toml  test_implementation.py
modules/lemkin-frameworks/lemkin-forensics/: README.md  pyproject.toml
modules/lemkin-frameworks/lemkin-forensics/src/lemkin_forensics/: __init__.py  authenticity_verifier.py  cli.py  file_analyzer.py  network_processor.py
modules/lemkin-frameworks/lemkin-images/src/lemkin-audio/src/lemkin_audio/: audio_enhancer.py  cli.py  core.py  speaker_analyzer.py
modules/lemkin-frameworks/lemkin-images/src/lemkin-dashboard/src/lemkin_dashboard/: __init__.py  case_dashboard.py  cli.py
modules/lemkin-frameworks/lemkin-images/src/lemkin-export/: pyproject.toml
modules/lemkin-frameworks/lemkin-images/src/lemkin-export/src/lemkin_export/: __init__.py  core.py
modules/lemkin-frameworks/lemkin-images/src/lemkin-ocr/src/lemkin_ocr/: __init__.py  cli.py  core.py  layout_analyzer.py
modules/lemkin-frameworks/lemkin-images/src/lemkin-reports/: pyproject.toml
modules/lemkin-frameworks/lemkin-images/src/lemkin_comms/: chat_processor.py  cli.py  network_mapper.py  pattern_detector.py
modules/lemkin-frameworks/lemkin-images/src/lemkin_images/: __init__.py  manipulation_detector.py  metadata_forensics.py  reverse_search.py
modules/lemkin-frameworks/lemkin-images/src/lemkin_reports/: core.py  export_manager.py
modules/lemkin-frameworks/lemkin-images/src/lemkin_research/: cli.py  core.py  precedent_analyzer.py
modules/lemkin-frameworks/lemkin-osint/: pyproject.toml
modules/lemkin-frameworks/lemkin-video/src/lemkin_video/: __init__.py  cli.py  compression_analyzer.py  deepfake_detector.py
modules/lemkin-frameworks/notebooks/: lemkin-frameworks_demo.ipynb
modules/lemkin-frameworks/scripts/: setup.sh
modules/lemkin-frameworks/src/lemkin_frameworks/: __init__.py  cli.py  core.py  element_analyzer.py  geneva_conventions.py  human_rights_frameworks.py
modules/lemkin-frameworks/src/lemkin_geo/: __init__.py  cli.py  coordinate_converter.py  geofence_processor.py  mapping_generator.py  satellite_analyzer.py
modules/lemkin-frameworks/src/lemkin_osint/: metadata_extractor.py  social_scraper.py  source_verifier.py
modules/lemkin-geo/: CONTRIBUTING.md  Makefile  pyproject.toml
modules/lemkin-geo/scripts/: setup.sh  validate_installation.py
modules/lemkin-integrity/: Makefile  README.md  docker-compose.yml  pyproject.toml
modules/lemkin-integrity/notebooks/: lemkin-integrity_demo.ipynb
modules/lemkin-integrity/scripts/: setup.sh
modules/lemkin-integrity/src/lemkin_integrity/: __init__.py  cli.py  utils.py
modules/lemkin-integrity/tests/: __init__.py
modules/lemkin-reports/: SECURITY.md  pyproject.toml
modules/lemkin-reports/notebooks/: lemkin-reports_demo.ipynb
modules/lemkin-reports/src/lemkin_reports/: cli.py
modules/lemkin-reports/tests/: test_core.py
modules/lemkin-research/: CONTRIBUTING.md  Makefile  pyproject.toml
modules/lemkin-research/scripts/: validate_installation.py
modules/lemkin-research/src/lemkin_research/: __init__.py
modules/lemkin-research/tests/: test_core.py
modules/lemkin-video/: CONTRIBUTING.md  Makefile  README.md  pyproject.toml
modules/lemkin-video/src/lemkin_video/: __init__.py
modules/lemkin-video/tests/: test_core.py
opensource/lemkin-classifier/: README.md  pyproject.toml
opensource/lemkin-classifier/scripts/: setup.sh  validate_installation.py
opensource/lemkin-classifier/src/lemkin_classifier/: confidence_scorer.py
opensource/lemkin-frameworks/lemkin-images/: pyproject.toml
opensource/lemkin-frameworks/lemkin-images/src/lemkin-audio/src/lemkin_audio/: authenticity_detector.py  speech_transcriber.py
opensource/lemkin-frameworks/lemkin-images/src/lemkin-dashboard/: pyproject.toml
opensource/lemkin-frameworks/lemkin-images/src/lemkin-dashboard/src/lemkin_dashboard/: core.py  metrics_tracker.py  network_grapher.py  timeline_visualizer.py
opensource/lemkin-frameworks/lemkin-images/src/lemkin-export/src/lemkin_export/: format_validator.py  icc_formatter.py
opensource/lemkin-frameworks/lemkin-images/src/lemkin-ocr/src/lemkin_ocr/: handwriting_processor.py  multilingual_ocr.py
opensource/lemkin-frameworks/lemkin-images/src/lemkin-research/: pyproject.toml
opensource/lemkin-frameworks/lemkin-images/src/lemkin_comms/: __init__.py  core.py
opensource/lemkin-frameworks/lemkin-images/src/lemkin_images/: cli.py  core.py
opensource/lemkin-frameworks/lemkin-images/src/lemkin_reports/: evidence_cataloger.py
opensource/lemkin-frameworks/lemkin-images/src/lemkin_research/: __init__.py  case_law_searcher.py
opensource/lemkin-frameworks/lemkin-video/: pyproject.toml
opensource/lemkin-frameworks/lemkin-video/src/lemkin_video/: core.py  video_fingerprinter.py
(+483 files in other folders)
