[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lemkin-timeline"
version = "0.1.0"
description = "Temporal information extraction and chronological narrative construction for legal investigations"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Lemkin AI Contributors", email = "contributors@lemkin.org"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "spacy>=3.6.0",
    "dateutil>=2.8.0",
    "arrow>=1.2.0",
    "parsedatetime>=2.6.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "networkx>=3.1.0",
    "plotly>=5.15.0",
    "bokeh>=3.2.0",
    "pyvis>=0.3.0",
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "loguru>=0.7.0",
    "iso8601>=1.1.0",
    "chronyk>=1.0.0",
    "duckling>=1.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "jupyter>=1.0.0",
]

[project.scripts]
lemkin-timeline = "lemkin_timeline.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "W", "C", "N"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src/lemkin_timeline --cov-report=html --cov-report=term-missing"