[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lemkin-video"
version = "0.1.0"
description = "Video authentication toolkit for detecting manipulation and verifying authenticity"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Lemkin AI Contributors", email = "contributors@lemkin.org"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Video",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
requires-python = ">=3.10"
dependencies = [
    "opencv-python>=4.8.0",
    "ffmpeg-python>=0.2.0",
    "moviepy>=1.0.3",
    "face-recognition>=1.3.0",
    "mediapipe>=0.10.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "pillow>=10.0.0",
    "imagehash>=4.3.1",
    "python-magic>=0.4.27",
    "exifread>=3.0.0",
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "loguru>=0.7.0",
    "tqdm>=4.65.0",
    "plotly>=5.15.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "jupyter>=1.0.0",
]

[project.scripts]
lemkin-video = "lemkin_video.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "W", "C", "N"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src/lemkin_video --cov-report=html --cov-report=term-missing"